feat(scw): wip qaas remote qaas
