# server/internal/core/worker_entry.go
@@ -7,13 +7,13 @@ import (
 )
 
 func (e *DaemonCore) CreateWorkerEntry(ctx context.Context,
-	provider string,
-	hash string,
+	workerProvider string,
+	workerHash string,
 	inputFormat string) (*object.WorkerEntry, error) {
 	worker := &object.WorkerEntry{
-		Provider:    provider,
-		Hash:        hash,
-		InputFormat: inputFormat,
+		WorkerProvider: workerProvider,
+		WorkerHash:     workerHash,
+		InputFormat:    inputFormat,
 	}
 
 	e.workers = append(e.workers, worker)
