# server/internal/object/resource.go
@@ -1,0 +1,7 @@
+package object
+
+type ResourceAsignment struct {
+	ResourceProvider string
+	ResourceName     string
+	TaskHash         string
+}
